--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "@firebase/firestore": "^0.5.3",
+    "axios": "^0.18.0",
     "expo": "^27.0.1",
     "firebase": "^5.0.2",
+    "firebase-admin": "^5.5.0",
+    "firebase-functions": "^0.7.3",
+    "fs": "0.0.1-security",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-native-firebase": "^4.2.0",
     "react-native-is-iphonex": "^1.0.1",
     "react-navigation": "2.0.0"
   },
