--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fs": "0.0.1-security",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-native-elements": "^0.19.1",
     "react-native-firebase": "^4.2.0",
     "react-native-is-iphonex": "^1.0.1",
     "react-navigation": "2.0.0"
