--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "@firebase/firestore": "^0.5.3",
-    "axios": "^0.18.0",
     "expo": "^27.0.1",
+    "expo-graphics": "0.0.4",
+    "expo-three": "^2.2.2-alpha.1",
     "firebase": "^5.0.2",
-    "firebase-admin": "^5.5.0",
     "firebase-functions": "^0.7.3",
     "fs": "0.0.1-security",
+    "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
-    "react-native-firebase": "^4.2.0",
-    "react-native-is-iphonex": "^1.0.1",
-    "react-navigation": "2.0.0"
+    "react-navigation": "2.0.0",
+    "three": "^0.92.0"
   },
   "devDependencies": {
     "jest-expo": "^27.0.0"
