--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "@firebase/firestore": "^0.5.3",
+    "axios": "^0.18.0",
     "expo": "^27.0.1",
     "expo-graphics": "0.0.4",
     "expo-three": "^2.2.2-alpha.1",
