--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
+    "react-native-loader": "^1.2.1",
     "react-navigation": "2.0.0",
     "three": "^0.92.0"
   },
