--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^5.0.2",
     "firebase-functions": "^0.7.3",
     "fs": "0.0.1-security",
+    "googleapis": "^31.0.2",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
